<resources>
    <string name="app_name">Plaenty</string>
    <string name="tab_dashboard_text">Dashboard</string>
    <string name="tab_configs_text">Configs</string>
    <string name="ec_sensor">Ec:</string>
    <string name="ph_sensor">Ph:</string>
    <string name="light_sensor">Light:</string>
    <string name="active_config">Active config:</string>
    <string name="network_error">Network error. Please check your connection!</string>
    <string name="config_error">Couldn\'t find configuration</string>
    <string name="set_active">Set as active configuration</string>
    <string name="set_active_error">Couldn\'t set active configuration</string>
    <string name="login_error">Login failed</string>
    <string name="signup_error">Signup failed</string>
    <string name="nan">NaN</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="lightrequired_array">
        <item>Low</item>
        <item>Normal</item>
        <item>High</item>
    </string-array>
</resources>